# DISRecorder

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.h
